welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: not found: value R
  if (message == R) { 
                 ^BDRBuggle:11: error: not found: value L
  } else if (message == L) { 
                        ^BDRBuggle:15: error: not found: value I
  } else if (message == I) { 
                        ^BDRBuggle:20: error: not found: value A
  } else if (message == A) { 
                        ^BDRBuggle:23: error: not found: value B
  } else if (message == B) { 
                        ^BDRBuggle:27: error: not found: value C
  } else if (message == C) { 
                        ^BDRBuggle:32: error: not found: value Z
  } else if (message == Z) { 
                        ^BDRBuggle:35: error: not found: value Y
  } else if (message == Y) { 
                        ^BDRBuggle:39: error: not found: value X
  } else if (message == X) { 
                        ^